# igrf-model

./: .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml  tbump.toml
.github/workflows/: pytest.yml
src/igrf_model/: __init__.py  _igrf13syn.py  evaluation.py  model.py  types.py  utils.py  vector.py  version.py
test/: test_bound_model.py
tests/: test_model.py  test_utils.py
