[tool.poetry]
name = "igrf-model"
version = "1.1.3"
description = "Pure Python implementation of the IGRF13 magnetic model"
authors = ["Tamas Nepusz <ntamas@gmail.com>"]
license = "MIT"
packages = [
    { include = "igrf_model", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
coverage = {extras = ["toml"], version = "^7.3"}

[tool.ruff]
lint.ignore = ["B905", "C901", "E402", "E501"]
lint.select = ["B", "C", "E", "F", "W"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
