[project]
name = "igrf-model"
version = "1.1.3"
description = "Pure Python implementation of the IGRF13 magnetic model"
authors = [{ name = "Tamas Nepusz", email = "ntamas@gmail.com" }]
license = "MIT"
requires-python = ">=3.8"

[dependency-groups]
dev = ["pytest>=8.1.0", "pytest-cov>=5.0.0", "coverage[toml]>=7.3"]

[tool.hatch.build.targets.wheel]
packages = ["src/igrf_model"]

[tool.ruff]
lint.ignore = ["B905", "C901", "E402", "E501"]
lint.select = ["B", "C", "E", "F", "W"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
