[project]
name = "igrf-model"
version = "1.1.4"
description = "Pure Python implementation of the IGRF13 magnetic model"
authors = [{ name = "Tamas Nepusz", email = "ntamas@gmail.com" }]
license = "MIT"
license-files = ["LICENSE.md"]
requires-python = ">=3.8"

[dependency-groups]
dev = ["pytest>=8.1.0", "pytest-cov>=5.0.0", "coverage[toml]>=7.3"]

[tool.ruff]
lint.ignore = ["B905", "C901", "E402", "E501"]
lint.select = ["B", "C", "E", "F", "W"]

[build-system]
requires = ["uv_build>=0.7.18,<0.8"]
build-backend = "uv_build"
